<resources>
    <string name="app_name">SamsungMobile</string>
    <string name="show_working_title">نمایش کارکرد ها</string>
    <string name="show_dated_result">مشاهدی کارکرد از تاریخ تا تاریخ</string>
    <string name="show_mounted_result">مشاهده کارکرد این ماه</string>
    <string name="show_all_result">مشاهده کل کارکرد</string>
    <string name="to_date">تا تاریخ :</string>
    <string name="from_date">از تاریخ :</string>
    <string name="view_work_dated_ok_button_text">مشاهده</string>
    <string name="cancel">لغو</string>
    <string name="work_filter_menu_title">نمایش پنل فیلتر کارکرد ها</string>
    <string name="show_sum_all_result_text">نمایش جمع کل دریافتی</string>
    <string name="show_sod_of_result_text">نمایش سود</string>
    <string name="sood_title">مشاهده سود</string>
    <string name="all_daryafti_title">کل دریافتی</string>
    <string name="pleas_wait">لطفا صبر کنید</string>
    <string name="fetching_model_error_title">خطا</string>
    <string name="fetching_model_error_message">نتوانستیم اطلاعات را از سرور دریافت کنیم . لطفا تنظیمات اینترنت خود را چک کنید</string>
    <string name="edit">ویرایش</string>
    <string name="delete"> حذف کارکرد</string>
    <string name="delete_item_message">آیا از حذف این کارکرد مطمئن هستید ؟</string>
    <string name="Yes">بله</string>
    <string name="add_job">سامسونگ موبایل</string>
    <string name="work_results">کارکرد ها</string>
    <string name="work_results_filter">فیلتر و مشاهده کارکرد ها</string>
    <string name="edit_job">ویرایش کارکرد</string>
    <string name="foros_title">قمیت فروش</string>
    <string name="detail_tozihat">توضیحات</string>
    <string name="detail_work_title">عنوان</string>
    <string name="detail_work_kharid">قیمت خرید</string>
    <string name="detail_work_date">تاریخ</string>
    <string name="detail_title_text">جزئیات کارکرد</string>
    <string name="ok">OK</string>
    <string name="no_document_found_for_query_message">هیچ اطلاعاتی یافت نشد!</string>
    <string name="oflineAsyns_message">اینترنت در دسترس نیست . مدتی بعد از متصل شدن به اینترن اطلاعات در سرور ذخیره خواهند شد.</string>
    <string name="password_setting_title">تنظیمات رمز</string>
    <string name="choose_user">یک اسم را انتخاب کنید</string>
    <string name="update">بروزرسانی</string>
    <string name="update_message">یک بروزرسانی برای این برنامه وجود دارد. در صورت بروزرسانی نکردن ، برنامه کار نخواهد کرد!</string>
    <string name="pass_is_incurrect">رمز اشتباه است</string>
    <string name="password">گذرواژه</string>
    <string name="remember_pass_text">رمز را برای دفعات بعد به خاطر بسپار</string>
    <string name="current_pass">گذرواژه فعلی</string>
    <string name="new_pass_text">گذرواژه جدید</string>
    <string name="confirm_new_pass">تایید گذرواژه</string>
    <string name="save">ذخیره</string>
    <string name="insert_current_pass">گذرواژه فعلی را وارد کنید</string>
    <string name="insert_new_pass">گذرواژه جدید را وارد کنید</string>
    <string name="insert_confrim_new_pass">گذرواژه تایید را وارد کنید</string>
    <string name="passes_not_equals">گذرواژه ها با هم یکی نیستند</string>
    <string name="password_saved">با موفقیت ذخیره شد</string>
    <string name="problem_to_save_pass">خطا در اتصال به سرور و ذخیره گذروازه جدید</string>
    <string name="current_pass_is_incurrect">پسورد فعلی وارد شده اشتباه است</string>
    <string name="chanfe_password">تغییر گذرواژه</string>
    <string name="date">تاریخ</string>
</resources>
