<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:padding="20dp">
<TextView
    android:id="@+id/get_pass_dialog_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/password"
    android:textStyle="bold"
    android:textSize="18sp"/>
    <EditText
        android:id="@+id/get_pass_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layoutDirection="ltr"
        android:layout_below="@id/get_pass_dialog_title"
        android:inputType="textPassword"
        android:layout_marginTop="15dp"/>
    <CheckBox
        android:id="@+id/get_pass_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/get_pass_edit_text"
        android:layout_marginTop="10dp"
        android:text="@string/remember_pass_text"/>

    <LinearLayout
        android:id="@+id/get_pass_button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/get_pass_checkbox"
        android:layout_marginTop="23dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/get_pass_dialog_cancel_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_weight="50"
            android:text="@string/cancel"
            android:theme="@style/myButton" />

        <Button
            android:id="@+id/get_pass_dialog_ok_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_weight="50"
            android:text="@string/ok"
            android:theme="@style/myButton2" />
    </LinearLayout>

</RelativeLayout>