<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    tools:context="smartdevelopers.ir.hesabdari.samsungmobile.PasswordActivity">
    <Spinner
        android:id="@+id/change_pass_userSelector"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layoutDirection="ltr"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"/>
    <LinearLayout
        android:id="@+id/current_pass_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/change_pass_userSelector"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:labelFor="@id/change_pass_current"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            android:text="@string/current_pass"

            />
        <EditText
            android:id="@+id/change_pass_current"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:lines="1"
            android:inputType="textPassword"
            android:backgroundTint="@color/colorSky"
            android:layout_weight="70"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/change_pass_new_pass_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/current_pass_layout"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:labelFor="@id/change_pass_new_pass_editText"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            android:text="@string/new_pass_text"
            />
        <EditText
            android:id="@+id/change_pass_new_pass_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:lines="1"
            android:inputType="textPassword"
            android:backgroundTint="@color/colorSky"
            android:layout_weight="70"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/change_pass_confirm_new_pass_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/change_pass_new_pass_layout"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:labelFor="@id/change_pass_confirm_new_pass_editText"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            android:text="@string/confirm_new_pass"
            />
        <EditText
            android:id="@+id/change_pass_confirm_new_pass_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:lines="1"
            android:inputType="textPassword"
            android:backgroundTint="@color/colorSky"
            android:layout_weight="70"/>
    </LinearLayout>
    <Button
        android:id="@+id/change_pass_save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/change_pass_confirm_new_pass_layout"
        android:layout_marginTop="50dp"
        android:textSize="18sp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:theme="@style/myButton2"
        android:text="@string/save"/>
</RelativeLayout>
