<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl">
<LinearLayout
    android:id="@+id/selector_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"

    >
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="50"
        android:orientation="vertical"
        android:minWidth="1800dp"
        android:gravity="center"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_margin="5dp"
        android:paddingBottom="15dp"
        android:background="@drawable/custom_spinner_bg"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from_date"
                android:layout_gravity="start"
                />
            <TextView
                android:id="@+id/from_date_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1397/5/6"
                android:textSize="12sp"
                android:layout_marginStart="10dp"
                />
        </LinearLayout>

        <Spinner
            android:id="@+id/from_date_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layoutDirection="ltr"

            />
        <Spinner
            android:id="@+id/from_date_mount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layoutDirection="ltr"
            />
        <Spinner
            android:id="@+id/from_date_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layoutDirection="ltr"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="50"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="5dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="15dp"
        android:background="@drawable/custom_spinner_bg"
        android:minWidth="1800dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to_date"

                android:layout_gravity="start"
                />
            <TextView
                android:id="@+id/to_date_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1397/5/6"
                android:textSize="12sp"

                android:layout_marginStart="10dp"
                />
        </LinearLayout>
        <Spinner
            android:id="@+id/to_date_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layoutDirection="ltr"
            />
        <Spinner
            android:id="@+id/to_date_mount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layoutDirection="ltr"
            />
        <Spinner
            android:id="@+id/to_date_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layoutDirection="ltr"

            />

    </LinearLayout>

</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/selector_layout">
        <Button
            android:id="@+id/work_date_selector_confirm_button"
            android:layout_width="0dp"
            android:layout_weight="50"
            android:layout_height="wrap_content"

            android:text="@string/view_work_dated_ok_button_text"/>
        <Button
            android:id="@+id/work_date_selector_cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"

            android:text="@string/cancel"/>
    </LinearLayout>

</RelativeLayout>